o-nama - gotova stranica

--- a/o-nama.html
+++ b/o-nama.html
@@ -196,7 +196,7 @@
                             ste preko 55.000.000 dinara i tako pokazali da
                             mislite na one kojima je pomoć potrebna.
                         </span>
-                        <a id="know-more-btn" class="know-more-btn text-white font-weight-bold" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="myFunction(this)" data-open="2"><i class="fas fa-plus"></i> Pročitaj više</a>
+                        <a class="know-more-btn text-white font-weight-bold" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="myFunction(this)" data-open="2"><i class="fas fa-plus"></i> Pročitaj više</a>
                 </div>
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body card--podeli">
@@ -214,6 +214,137 @@
         </div>
     </section>
     <!-- ABOUT US PODELI -->
+
+    <!-- ABOUT US 18+ -->
+    <section class="about-us-18plus">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 m-auto">
+                    <div class="row">
+                        <div class="col-md-8 order-2 order-md-1">
+                            <h1 class="mb-4 font-weight-bold">Igraj na sreću...<br> S’ merom<span class="color-yellow">!</span></h1>
+                            <span class="about-us-txt__big">
+                                Dok igrate naše igre, pre svega maštate o
+                                dobitku i zabavljate se. Želimo da tako i
+                                ostane. Budite odgovorni prema sebi i
+                                uživajte u našim igrama dok one za vas
+                                predstvaljaju vid zabave.
+                            </span>
+                            <a class="know-more-btn font-weight-bold know-more-btn--dark" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="myFunction(this)" data-open="2"><i class="fas fa-plus"></i> Pročitaj više</a>
+                        </div>
+                        <div class="col-md-4 order-1 order-md-2">
+                            <div class="sre18plus">
+                                <img src="images/o-nama/srecko18plus@o-nama.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="collapse" id="collapseExample2">
+                                <div class="card card-body card--18plus">
+                                    <p class="mb-4">Dok igrate naše igre, pre svega maštate o dobitku i zabavljate se. Želimo da tako i ostane.
+                                    Budite odgovorni prema sebi i uživajte u našim igrama dok one za vas predstvaljaju vid zabave.</p>
+                                    <ul class="red-star">
+                                        <li>Igre na sreću igrajte samo radi zabave</li>
+                                        <li>Novac koji izgubite smatrajte cenom Vaše zabave</li>
+                                        <li>Odredite iznos koji planirate da potrošite i nemojte ga povećavati</li>
+                                        <li>Odredite vreme koje ćete odvojiti za igranje igara na sreću i nemojte odstupati</li>
+                                        <li>Nemojte pozajmljivati novac za odigravanje igara na sreću</li>
+                                        <li>Održavajte prijateljstva i porodične odnose, igre na sreću to ne mogu zameniti</li>
+                                        <li>Odigravanje igara na sreću nemojte koristiti kako biste zaboravili na emotivni ili fizički bol, jer igre na sreću su samo zabava</li>
+                                        <li>Budite upoznati sa znakovima problematičnog odigravanja igre na sreću</li>
+                                    </ul>
+                                    <div class="card--18plus__banner">
+                                        <p><strong>Ukoliko imate problem sa kontrolom poriva odigravanja igara na sreću možete <span class="color-red">dobrovoljno tražiti</span> da Vam se onemogući pristup igrama na sreću koje priređuje Državna lutrija Srbije.</strong></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT US 18+ -->
+
+    <!-- OBRENOVIC -->
+    <section class="obrenovic">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 m-auto">
+                    <div class="row align-items-center">
+                        <div class="col-md-4">
+                            <div class="obrenovic__slika d-flex justify-content-center">
+                                <img src="images/o-nama/Milos-Obrenovic.jpg" alt="" class="mb-5 mb-md-0">
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <h1 class="mb-4 font-weight-bold">Lutrija kroz vreme<span class="color-blue">.</span></h1>
+                            <span class="about-us-txt__big">
+                                Lutrija na našim prostorima datira iz perioda
+                                vladavine kneza Miloša Obrenovića,
+                                početkom 19. veka. Knez Miloš Obrenović
+                                dozvolio je organizovanje igara na sreću,
+                                kako bi potpomogao privredu u zemlji.
+                            </span>
+                            <a class="know-more-btn font-weight-bold know-more-btn--dark know-more-btn--dark-mo" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="myFunction(this)" data-open="2"><i class="fas fa-plus"></i> Pročitaj više</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 m-auto">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="collapse" id="collapseExample3">
+                            <div class="card card-body card--18plus">
+                                <div class="triangle-mob"></div>
+                                <span class="about-us-txt__big mt-5">19. vek - Počeci igara na sreću</span>
+                                <p>Lutrija na našim prostorima datira iz perioda vladavine kneza Miloša Obrenovića, početkom 19.
+                                veka. Knez Miloš Obrenović dozvolio je organizovanje igara na sreću, kako bi potpomogao
+                                privredu u zemlji.</p>
+                                <p>Izvlačenje dobitaka bilo je svake druge nedelje, a izveštaji o dobicima su objavljivani u
+                                „Srpskim novinama". Nagrade su bile robne i za ono vreme vredne. Tako su u februaru 1834.
+                                godine dobici na lutriji bili konj i kola, srebrna sablja i zlatni sat.
+                                Četiri godine kasnije, nažalost, prva srpska lutrija, koja je za cilj imala da prodajom srećki
+                                potpomogne privredu u zemlji, ugašena je.<br>
+                                Istorija lutrijskih igara u našoj zemlji nastavlja se krajem XIX veka. Prihode Klasne lutrije
+                                kontrolisalo je Ministarstvo narodne privrede, deo je pretvaran u akcije državnih preduzeća,
+                                dok je ostatak izdvajan u humanitarne svrhe.</p>
+                                <span class="about-us-txt__big mt-4">Obnova „Državne klasne lutrije“ 1919. godine</span>
+                                <p>Tokom Prvog svetskog rata, lutrija u našoj zemlji nije radila, a obnovljena je 1919, pod nazivom
+                                „Državna klasna lutrija“ sa centralom u Beogradu i ekspoziturama u Zagrebu, Ljubljani,
+                                Dubrovniku, Skoplju, Sarajevu, na Cetinju i u Novom Sadu.</p>
+                                <p>Drugi svetski rat uništio je sav kapital koji je Državna klasna lutrija stvarala više od pola veka.
+                                Ipak i tako osiromašena, institucija lutrije uspela je da preživi.
+                                U posleratnoj Jugoslaviji lutrijske igre nastavile su da se organizuju u okviru države.</p>
+                                <p>Od početka sedamdesetih godina prošlog veka, prestala je da postoji Lutrija Jugoslavije i
+                                svaka od republika i dve pokrajine imala je svoju Lutriju.</p>
+                                <p>Državna lutrija Srbije je osnovana 2004. godine u skladu sa Zakonom o igrama na sreću, kao
+                                jednočlano društvo sa ograničenom odgovornošću i od tada započinje novu epohu u
+                                organizovanju lutrijskih igara u Srbiji.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- OBRENOVIC -->
+
+    <section class="about-dls">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 m-auto">
+                    <h1 class="text-center font-weight-bold color-red">MI SMO TU DA SVAKI DAN UČINIMO BOLJIM<span class="color-yellow">.</span></h1>
+                    <span class="about-us-txt__big text-center color-red">Državna lutrija Srbije</span>
+                    <img src="images/o-nama/Crveni-Srecko-ikonica.svg" alt="" class="about-dls__srecko">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer">
