round-circle klasa na slici

--- a/o-nama.html
+++ b/o-nama.html
@@ -274,7 +274,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-4">
                             <div class="obrenovic__slika d-flex justify-content-center">
-                                <img src="images/o-nama/Milos-Obrenovic.jpg" alt="" class="mb-5 mb-md-0">
+                                <img src="images/o-nama/Milos-Obrenovic.jpg" alt="" class="mb-5 mb-md-0 rounded-circle">
                             </div>
                         </div>
                         <div class="col-md-8">
