prodajna mesta tabela

--- a/index.html
+++ b/index.html
@@ -746,10 +746,12 @@
             <img src="images/e-srecke-potkovica.png" class="games-item__graphic">
         </div>
     </div>
-    <div class="games-btns justify-content-center align-items-center d-flex mt-4">
-        <p class="h5 mb-0 mr-3"><strong>Više igara </strong></p>
-        <button type="button" id="prevv" class="slick-prev">Previous</button>
-        <button type="button" id="nextt" class="slick-next">Next</button>
+    <div class="container">
+        <div class="games-btns justify-content-center align-items-center d-flex mt-4">
+            <p class="h5 mb-0 mr-3"><strong>Više igara </strong></p>
+            <button type="button" id="prevv" class="slick-prev">Previous</button>
+            <button type="button" id="nextt" class="slick-next">Next</button>
+        </div>
     </div>
     <!-- HOME CAROUSEL -->
 
