--- a/partner.html
+++ b/partner.html
@@ -355,9 +355,11 @@ Postani partner</p>
     </section>
 
     <!-- SRECKE NEXT/PREV -->
-    <div class="games-btns justify-content-center align-items-center d-flex pb-5 mb-5 mt-4">
-        <button type="button" id="par-prevv" class="slick-prev">Previous</button>
-        <button type="button" id="par-nextt" class="slick-next">Next</button>
+    <div class="container">
+        <div class="games-btns justify-content-between d-flex pb-5 mb-5 mt-4">
+            <button type="button" id="par-prevv" class="slick-prev">Previous</button>
+            <button type="button" id="par-nextt" class="slick-next">Next</button>
+        </div>
     </div>
     <!-- SRECKE NEXT/PREV -->
 
