--- a/prodajna-mesta.html
+++ b/prodajna-mesta.html
@@ -123,21 +123,21 @@ Pronađi svoje srećno mesto!</p>
 
                     <form class="form-inline row">
                         <div class="col-12">
-                            <div class="form-group mb-2 justify-content-center">
+                            <div class="form-group mb-2 justify-content-center justify-content-left-sm">
                                 <label for="a1" class="col-form-label"><i
                                         class="fas fa-info-circle mr-1" data-toggle="tooltip" data-placement="top" title="Tooltip on top Broj bankovnog računa"></i> Unesite deo naziva:</label>
 
-                                <div class="control-group mx-4">
+                                <div class="control-group mx-sm-4">
                                     <select id="select-links" placeholder="Grad..."></select>
                                 </div>
                                 
-                                <button type="submit" class="btn btn-dark font-weight-bold">PRETRAGA</button>
+                                <button type="submit" class="btn btn-dark font-weight-bold mt-xxs-1">PRETRAGA</button>
                             </div>
                         </div>
                         <div class="col-12 my-4">
-                            <div class="row justify-content-center">
+                            <div class="row justify-content-center justify-content-left-sm">
                                 <div class="col-sm-9">
-                                    <div class="row justify-content-center">
+                                    <div class="row justify-content-center prodaja-checkboxes">
                                         <div class="mx-4">
                                             <div class="custom-control custom-checkbox">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck6">
@@ -174,8 +174,8 @@ Pronađi svoje srećno mesto!</p>
     </div>
     <!-- TICKET -->
 
-    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11200.675829730526!2d-75.6876061!3d45.42609535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04ff4fe494ef%3A0x26bb54f60c29f6e!2sParliament+Hill!5e0!3m2!1sen!2sca!4v1528808935681"
-        width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11200.675829730526!2d-75.6876061!3d45.42609535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04ff4fe494ef%3A0x26bb54f60c29f6e!2sParliament+Hill!5e0!3m2!1sen!2sca!4v1528808935681"
+        width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
     <div class="container my-5 sorting-table">
