gotova prodajna mesta

--- a/prodajna-mesta.html
+++ b/prodajna-mesta.html
@@ -199,7 +199,7 @@ Pronađi svoje srećno mesto!</p>
                     <td>Napomena</td>
                 </tr>
                 <tr>
-                    <td>Agencija Jelenak</td>
+                    <td>TC Usce</td>
                     <td>Narodnih heroja 19</td>
                     <td>08-20</td>
                     <td>Lokal - čvrsta gradnja</td>
@@ -220,49 +220,7 @@ Pronađi svoje srećno mesto!</p>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
+                    <td>Delta city</td>
                     <td>Narodnih heroja 19</td>
                     <td>08-20</td>
                     <td>Lokal - čvrsta gradnja</td>
@@ -297,35 +255,7 @@ Pronađi svoje srećno mesto!</p>
                     <td>Napomena</td>
                 </tr>
                 <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
+                    <td>Delta city</td>
                     <td>Narodnih heroja 19</td>
                     <td>08-20</td>
                     <td>Lokal - čvrsta gradnja</td>
@@ -367,7 +297,7 @@ Pronađi svoje srećno mesto!</p>
                     <td>Napomena</td>
                 </tr>
                 <tr>
-                    <td>Agencija Jelenak</td>
+                    <td>Delta city</td>
                     <td>Narodnih heroja 19</td>
                     <td>08-20</td>
                     <td>Lokal - čvrsta gradnja</td>
@@ -388,158 +318,11 @@ Pronađi svoje srećno mesto!</p>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>Agencija Jelenak</td>
+                    <td>Delta city</td>
                     <td>Narodnih heroja 19</td>
                     <td>08-20</td>
                     <td>Lokal - čvrsta gradnja</td>
                     <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Agencija Jelenak</td>
-                    <td>Narodnih heroja 19</td>
-                    <td>08-20</td>
-                    <td>Lokal - čvrsta gradnja</td>
-                    <td>Napomena</td>
-                </tr>
-                <tr>
-                    <td>Jelenak</td>
-                    <td>Heroja 19</td>
-                    <td>12-20</td>
-                    <td>Cvrsta gradnja</td>
-                    <td></td>
                 </tr>
             </tbody>
         </table>
