--- a/prodajna-mesta.html
+++ b/prodajna-mesta.html
@@ -174,8 +174,43 @@ Pronađi svoje srećno mesto!</p>
     </div>
     <!-- TICKET -->
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11200.675829730526!2d-75.6876061!3d45.42609535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04ff4fe494ef%3A0x26bb54f60c29f6e!2sParliament+Hill!5e0!3m2!1sen!2sca!4v1528808935681"
+    <!-- MAP -->
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11200.675829730526!2d-75.6876061!3d45.42609535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04ff4fe494ef%3A0x26bb54f60c29f6e!2sParliament+Hill!5e0!3m2!1sen!2sca!4v1528808935681"
         width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="pin">
+            <div class="pin__text">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="store"
+                    class="svg-inline--fa fa-store fa-w-20 mb-2" role="img" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 616 512" height="30">
+                    <path fill="#F01B2B"
+                        d="M602 118.6L537.1 15C531.3 5.7 521 0 510 0H106C95 0 84.7 5.7 78.9 15L14 118.6c-33.5 53.5-3.8 127.9 58.8 136.4 4.5.6 9.1.9 13.7.9 29.6 0 55.8-13 73.8-33.1 18 20.1 44.3 33.1 73.8 33.1 29.6 0 55.8-13 73.8-33.1 18 20.1 44.3 33.1 73.8 33.1 29.6 0 55.8-13 73.8-33.1 18.1 20.1 44.3 33.1 73.8 33.1 4.7 0 9.2-.3 13.7-.9 62.8-8.4 92.6-82.8 59-136.4zM529.5 288c-10 0-19.9-1.5-29.5-3.8V384H116v-99.8c-9.6 2.2-19.5 3.8-29.5 3.8-6 0-12.1-.4-18-1.2-5.6-.8-11.1-2.1-16.4-3.6V480c0 17.7 14.3 32 32 32h448c17.7 0 32-14.3 32-32V283.2c-5.4 1.6-10.8 2.9-16.4 3.6-6.1.8-12.1 1.2-18.2 1.2z">
+                    </path>
+                </svg>
+                <span>Exclusive change</span>
+                <span><strong>Bulevar umetnosti 4</strong></span>
+            </div>
+        </div>
+
+        <div class="pin pin--store">
+            <div class="pin__text">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle"
+                    class="svg-inline--fa fa-check-circle fa-w-16 mb-2" role="img" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512" height="30">
+                    <path fill="#005DFF"
+                        d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z">
+                    </path>
+                </svg>
+                <span>Alta pay Group doo</span>
+                <span><strong>Bul. Z. Đinđića 6b</strong></span>
+            </div>
+        </div>
+    </div>
+    <!-- MAP -->
 
 
     <div class="container my-5 sorting-table">
@@ -571,6 +606,12 @@ Pronađi svoje srećno mesto!</p>
                 },
             } );
         } );
+    </script>
+
+    <script>
+        $(".pin").click(function(){
+            $(this).toggleClass("active");
+        })
     </script>
     
 </body>
