--- a/partner.html
+++ b/partner.html
@@ -310,7 +310,7 @@ Postani partner</p>
 
     <section class="container pt-5">
 
-        <h4 class="text-center mt-5 mb-4"><strong>NAŠI PARTNERI</strong></h4>
+        <h5 class="text-center mt-5 mb-4 btn--cern"><strong>NAŠI PARTNERI</strong></h5>
 
         <div class="partners">
 
@@ -356,7 +356,7 @@ Postani partner</p>
 
     <!-- SRECKE NEXT/PREV -->
     <div class="container">
-        <div class="games-btns justify-content-between d-flex pb-5 mb-5 mt-4">
+        <div class="games-btns games-btns--side-bnts justify-content-between d-flex pb-5 mb-5 mt-2">
             <button type="button" id="par-prevv" class="slick-prev">Previous</button>
             <button type="button" id="par-nextt" class="slick-next">Next</button>
         </div>
