dodao na klik izvan mape

--- a/prodajna-mesta.html
+++ b/prodajna-mesta.html
@@ -178,6 +178,7 @@ Pronađi svoje srećno mesto!</p>
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11200.675829730526!2d-75.6876061!3d45.42609535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04ff4fe494ef%3A0x26bb54f60c29f6e!2sParliament+Hill!5e0!3m2!1sen!2sca!4v1528808935681"
         width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        
         <div class="pin">
             <div class="pin__text">
                 <?xml version="1.0" encoding="utf-8"?>
@@ -609,6 +610,12 @@ Pronađi svoje srećno mesto!</p>
     </script>
 
     <script>
+        $("html").click(function() {
+            $(".pin").removeClass("active");
+        });
+        $(".pin").click(function(event){
+            event.stopPropagation();
+        });
         $(".pin").click(function(){
             $(this).toggleClass("active");
         })
