dodao X na pinovima

--- a/prodajna-mesta.html
+++ b/prodajna-mesta.html
@@ -192,6 +192,7 @@ Pronađi svoje srećno mesto!</p>
                 </svg>
                 <span>Exclusive change</span>
                 <span><strong>Bulevar umetnosti 4</strong></span>
+                <div class="pin__close"></div>
             </div>
         </div>
 
@@ -208,6 +209,7 @@ Pronađi svoje srećno mesto!</p>
                 </svg>
                 <span>Alta pay Group doo</span>
                 <span><strong>Bul. Z. Đinđića 6b</strong></span>
+                <div class="pin__close"></div>
             </div>
         </div>
     </div>
