--- a/o-nama.html
+++ b/o-nama.html
@@ -216,7 +216,7 @@
     <!-- ABOUT US PODELI -->
 
     <!-- ABOUT US 18+ -->
-    <section class="about-us-18plus">
+    <section class="about-us-18plus" id="about-us-18plus">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 m-auto">
