izmene za futer i partnere

--- a/prodajna-mesta.html
+++ b/prodajna-mesta.html
@@ -508,17 +508,17 @@ Pronađi svoje srećno mesto!</p>
                 </div>
                 <div class="col-sm-6 mt-3 ml-auto">
                     <div class="row align-items-center">
-                        <div class="col-3">
-                            <img src="images/Cert1.png" width="70">
+                        <div class="col-3 text-center">
+                            <img src="images/Cert1.png" width="110">
                         </div>
-                        <div class="col-3">
-                            <img src="images/Cert2.png" width="70">
+                        <div class="col-3 text-center">
+                            <img src="images/Cert2.png" width="80">
                         </div>
-                        <div class="col-3">
+                        <div class="col-3 text-center">
                             <img src="images/Cert3.png" width="70">
                         </div>
-                        <div class="col-3">
-                            <img src="https://verify.etrustmark.rs/cert/image.php" width="90">
+                        <div class="col-3 text-center">
+                            <img src="https://verify.etrustmark.rs/cert/image.php" width="110">
                         </div>
                     </div>
                 </div>
