poceo da radim na mom profilu

--- a/moj-profil.html
+++ b/moj-profil.html
@@ -71,7 +71,7 @@
                         <img src="images/Pomoc-igracima.png" alt="" class="nav-user__img">
                         <strong class="ml-1">bogati_dzoni</strong>
                         <i class="fas fa-envelope nav-user__msg ml-2">
-                            <span>12</span>
+                            <span class="new-msg">12</span>
                         </i>
                     </p>
                     <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit" style="display: block;">ODJAVI SE</a>
@@ -135,25 +135,53 @@
                         </div>
                     </div>
 
-                    <div class="col list-group list-profile-tabs" id="list-tab" role="tablist">
-                        <div class="row">
-                            <button class="col btn btn-tab ticket-card__btn active" id="standard" data-toggle="list"
-                                href="#standardni" role="tab"
-                                aria-controls="standard"><strong>Uplate/isplate</strong></button>
-                            <button class="col btn btn-tab ticket-card__btn" id="sistem" data-toggle="list"
-                                href="#sistemski" role="tab" aria-controls="sistem"><strong>Igraj
+                    <div class="list-profile-tabs">
+                        <div class="row list-group" id="list-tab" role="tablist">
+                            <button class="col-sm-2 btn btn-tab ticket-card__btn active" id="uplate" data-toggle="list"
+                                href="#uplate1" role="tab"
+                                aria-controls="uplate"><strong>Uplate/isplate</strong></button>
+                            <button class="col-sm-2 btn btn-tab ticket-card__btn" id="odgovorno" data-toggle="list"
+                                href="#odgovorno1" role="tab" aria-controls="odgovorno"><strong>Igraj
                                     odgovorno</strong></button>
-                            <button class="col btn btn-tab ticket-card__btn" id="sistem" data-toggle="list"
-                                href="#sistemski" role="tab" aria-controls="sistem"><strong>Istorija
+                            <button class="col-sm-2 btn btn-tab ticket-card__btn" id="istorija" data-toggle="list"
+                                href="#istorija1" role="tab" aria-controls="istorija"><strong>Istorija
                                     igranja</strong></button>
-                            <button class="col btn btn-tab ticket-card__btn" id="sistem" data-toggle="list"
-                                href="#sistemski" role="tab" aria-controls="sistem"><strong>Omiljeni
+                            <button class="col-sm-2 btn btn-tab ticket-card__btn" id="omiljeni" data-toggle="list"
+                                href="#omiljeni1" role="tab" aria-controls="omiljeni"><strong>Omiljeni
                                     brojevi</strong></button>
-                            <button class="col btn btn-tab ticket-card__btn" id="sistem" data-toggle="list"
-                                href="#sistemski" role="tab" aria-controls="sistem"><strong>Poruke 6</strong></button>
-                            <button class="col btn btn-tab ticket-card__btn" id="sistem" data-toggle="list"
-                                href="#sistemski" role="tab" aria-controls="sistem"><strong>Moj profil</strong></button>
+                            <button class="col-sm-2 btn btn-tab ticket-card__btn" id="poruke" data-toggle="list"
+                                href="#poruke1" role="tab" aria-controls="poruke"><strong>Poruke <span
+                                        class="new-msg new-msg--rel">12</span></strong></button>
+                            <button class="col-sm-2 btn btn-tab ticket-card__btn" id="profil" data-toggle="list"
+                                    href="#profil1" role="tab" aria-controls="profil"><strong>Moj profil</strong></button>
+                        </div>
+                    </div>
 
+                    <div class="col-12">
+                        <div class="tab-content row" id="ticket-tabContent">
+                            <div class="col-sm-12 tab-pane fade show active" id="uplate1" role="tabpanel"
+                                aria-labelledby="uplate">
+                                dsadsad
+                            </div>
+                            <div class="col-sm-12 tab-pane fade" id="odgovorno1" role="tabpanel" aria-labelledby="odgovorno">
+                                czxczx
+                            </div>
+                            <div class="col-sm-12 tab-pane fade" id="istorija1" role="tabpanel"
+                                aria-labelledby="istorija">
+                                czx6czx
+                            </div>
+                            <div class="col-sm-12 tab-pane fade" id="omiljeni1" role="tabpanel"
+                                aria-labelledby="omiljeni">
+                                cz5xczx
+                            </div>
+                            <div class="col-sm-12 tab-pane fade" id="poruke1" role="tabpanel"
+                                aria-labelledby="poruke">
+                                c3zxczx
+                            </div>
+                            <div class="col-sm-12 tab-pane fade" id="profil1" role="tabpanel"
+                                aria-labelledby="profil">
+                                czdxczx
+                            </div>
                         </div>
                     </div>
 
