zamenio futer i after futer na svim

--- a/e-srecke.html
+++ b/e-srecke.html
@@ -392,61 +392,68 @@
                 </div>
             </div>
             <div class="row mt-4 pb-4 border-bottom">
-                <div class="col-sm-2">
+                <div class="col">
                     <ul>
                         <li><a href="#"><strong>IGRE</strong></a></li>
                         <li><a href="#">Loto</a></li>
                         <li><a href="#">Bingo</a></li>
                         <li><a href="#">Greb Greb</a></li>
                         <li><a href="#">eSrećke</a></li>
-                        <li><a href="#">Srećkovo takmičenje</a></li>
+                        <li><a href="#">Tombola <strong>(new)</strong></a></li>
                         <li><a href="#">Pravila igre</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-2">
+                <div class="col">
                     <ul>
                         <li><a href="#"><strong>REZULTATI</strong></a></li>
                         <li><a href="#">Loto</a></li>
                         <li><a href="#">Bingo</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-2">
+                <div class="col">
                     <ul>
-                        <li><a href="#"><strong>VESTI</strong></a></li>
-                        <li><a href="#">Novosti</a></li>
+                        <li><a href="#"><strong>NOVOSTI</strong></a></li>
                         <li><a href="#">Srećni dobitnici</a></li>
-                        <li><a href="#">Arhiva</a></li>
-                        <li><a href="#">DOP</a></li>
+                        <li><a href="#">Vesti</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-2">
+                <div class="col">
                     <ul>
-                        <li><a href="#"><strong>O NAMA</strong></a></li>
-                        <li><a href="#">Istorijat</a></li>
+                        <li><a href="#"><strong>DLS</strong></a></li>
+                        <li><a href="#">O nama</a></li>
+                        <li><a href="#">Odgovorno poslovanje</a></li>
+                        <li><a href="#">Postani partner</a></li>
                         <li><a href="#">Finansijski izveštaji</a></li>
-                        <li><a href="#">Ostala dokumenta</a></li>
                         <li><a href="#">Javne nabavke</a></li>
-                        <li><a href="#">Anketa</a></li>
+                        <li><a href="#">Ostala dokumenta</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-2">
+                <div class="col">
                     <ul>
                         <li><a href="#"><strong>POMOĆ</strong></a></li>
-                        <li><a href="#">Šta je Loto Online?</a></li>
-                        <li><a href="#">Šta je DLS račun?</a></li>
-                        <li><a href="#">Šta je Moj nalog?</a></li>
-                        <li><a href="#">eSrećke?</a></li>
-                        <li><a href="#">Srećkovo takmičenje?</a></li>
+                        <li><a href="#">Često postavljana pitanja</a></li>
+                        <li><a href="kontakt.html">Postavi pitanje</a></li>
+                        <li><a href="#">Pomoć pri registraciji</a></li>
+                        <li><a href="#">Uplatna mesta</a></li>
+                        <li><a href="o-nama.html#about-us-18plus">Samoisključenje</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-2">
+                <div class="col">
                     <ul>
                         <li><a href="#"><strong>KONTAKT</strong></a></li>
                         <li><a href="#">Državna lutrija Srbije</a></li>
                         <li><a href="#">Uskočka 4-6</a></li>
                         <li><a href="#">Tel: 0800 202 303</a></li>
+                        <li><a href="#">Koverta i email adresa:</a></li>
+                        <li><a href="#" href="mailto:helpdesk@lutrija.rs">helpdesk@lutrija.rs</a></li>
                         <li><a href="#">(Pon-Ned. 07:00-22:00h)</a></li>
                         <li><a href="#">11000 Beograd, Srbija</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li><a href="#"><strong>SPONZORSTVA</strong></a></li>
+                        <li><a href="https://kkcrvenazvezda.rs/">KK Crvena Zvezda</a></li>
                     </ul>
                 </div>
             </div>
@@ -459,10 +466,11 @@
                         <li><a href="#">Kome pomažete igrajući igre</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-4 offset-md-1">
+                <div class="col-sm-5">
                     <ul>
                         <li>
-                            <a href="#" class="d-inline"><strong>Uslovi</strong></a>&nbsp;&nbsp;&nbsp;
+                            <a href="https://www.lutrija.rs/DLSFiles/Dokumenti/Op%C5%A1ti%20uslovi%20kori%C5%A1%C4%87enja%20portala.pdf"
+                                class="d-inline"><strong>Opšti uslovi</strong></a>&nbsp;&nbsp;&nbsp;
                             <a href="#" class="d-inline"><strong>Politika privatnosti</strong></a>&nbsp;&nbsp;
                             <a href="#" class="d-inline"><strong>Polisa kolačića</strong></a>
                         </li>
@@ -482,7 +490,7 @@
                 <div class="col-sm-2 ml-auto mt-3">
                     <ul>
                         <li class="color-white">
-                            <a href="#" class="active">Srpski</a> | <a href="#">English</a>
+                            <a href="#">Ćirilica</a> | <a href="#" class="active">Latinica</a>
                         </li>
                     </ul>
                 </div>
@@ -491,6 +499,7 @@
     </footer>
     <!-- FOOTER -->
 
+
     <!-- AFTER FOOTER -->
     <footer class="after-footer">
         <div class="container">
@@ -498,16 +507,19 @@
                 <div class="col-sm-4 mt-3">
                     <span>2020. dls@alrightsreserved</span>
                 </div>
-                <div class="col-sm-3 mt-3 ml-auto">
+                <div class="col-sm-6 mt-3 ml-auto">
                     <div class="row align-items-center">
-                        <div class="col-4">
-                            <img src="images/Cert1.png" width="70">
+                        <div class="col-3 text-center">
+                            <img src="images/Cert1.png" width="110">
                         </div>
-                        <div class="col-4">
+                        <div class="col-3 text-center">
                             <img src="images/Cert2.png" width="70">
                         </div>
-                        <div class="col-4">
-                            <img src="images/Cert3.png" width="70">
+                        <div class="col-3 text-center">
+                            <img src="images/Cert3.png" width="60">
+                        </div>
+                        <div class="col-3 text-center">
+                            <img src="https://verify.etrustmark.rs/cert/image.php" width="110">
                         </div>
                     </div>
                 </div>
